Feat: 12장 콜백함수 추가

--- a/2주차/12.md
+++ b/2주차/12.md
@@ -202,3 +202,28 @@ const app = (() => {
   return { version: "1.0.0" };
 })();
 ```
+- - - 
+## 12. 콜백 함수란?
+콜백 함수 (Callback Function) 란 다른 함수의 인자로 전달되는 함수입니다.
+전달된 함수는 나중에 호출됩니다.
+
+## 13.  부수효과란?
+부수효과 (Side Effect) 란
+함수가 실행될 때 외부 상태를 변경하는 것입니다.
+
+📌 왜 조심해야 할까요?
+코드 예측이 어려워집니다.
+
+디버깅이 복잡해집니다.
+
+테스트가 어려워집니다.
+
+👉 일반 JS 권장 패턴
+함수는 입력 → 출력만 담당하도록 작성
+
+외부 상태 변경은 최소화
+
+👉 React에서는?
+컴포넌트는 UI만 담당
+
+부수효과는 useEffect에서만 처리합니다.
